--- a/advanced_search.html
+++ b/advanced_search.html
@@ -9,56 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css"> 
-    <style> body {
-      font-family: arial, sans-serif;
-    }
-    label.advSearch {
-      font-size:12px;
-
-    }
-
-    div.divLabel {
-      min-width: 167px;
-      width:16%;
-      line-height:16px;
-      vertical-align: middle;
-      display:inline-block;
-    }
-
-    div.divInput {
-      min-width:167px;
-      line-height:16px;
-      vertical-align: middle;
-      min-height:41px;
-      width:46%;
-      display:inline-block;
-    }
-
-    div.divSpan {
-      min-width:167px;
-      width:36%;
-      color:#555555;
-      font-size:11px;
-      padding-left:5px;
-      vertical-align: middle;
-      float:right;
-      line-height:16px;
-    }
-
-    #myInputs input {
-      border-radius:1px;
-      text-align:left;
-      width:100%;
-      border:1px solid #d9d9d9;
-      font-size:13px;
-      height:25px;
-      padding:1px 8px;
-    }
-    </style>
-
+    
     <title>Google Advanced Search</title>
   </head>
-  <body>
+  <body id="adv_search_page">
         
           <div class="container-fluid">
             <div class="row">
