commit of 20 Mar misc

--- a/advanced_search.html
+++ b/advanced_search.html
@@ -160,7 +160,7 @@
               <div>
                 <div class="divLabel">
                   <label class="advSearch" for="noneOfTheseWords"
-                    >none of this words:</label
+                    >none of these words:</label
                   >
                 </div>
                 <div class="divInput">
